# finite-state_machine

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
fsm/: __init__.py  utils.py  version.py
fsm/core/: state_machine.py
sample/: sample_state_machine.py
test/: conftest.py  test_sm_action.py  test_sm_argument.py  test_sm_state.py  test_sm_transition.py
